--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,6 @@
 {
   "buildCommand": "cd frontend && npm install && npm run build",
   "outputDirectory": "frontend/.next",
-  "installCommand": "cd frontend && npm install",
-  "framework": null,
-  "rootDirectory": "frontend"
+  "installCommand": "cd frontend && npm install"
 }
 
